; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_reset_state.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_exec_reset_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_cs = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.wined3d_adapter* }
%struct.wined3d_adapter = type { i32, i32 }

@WINED3D_STATE_NO_REF = common dso_local global i32 0, align 4
@WINED3D_STATE_INIT_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_cs*, i8*)* @wined3d_cs_exec_reset_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wined3d_cs_exec_reset_state(%struct.wined3d_cs* %0, i8* %1) #0 {
  %3 = alloca %struct.wined3d_cs*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wined3d_adapter*, align 8
  store %struct.wined3d_cs* %0, %struct.wined3d_cs** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %7 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %6, i32 0, i32 2
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.wined3d_adapter*, %struct.wined3d_adapter** %9, align 8
  store %struct.wined3d_adapter* %10, %struct.wined3d_adapter** %5, align 8
  %11 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %12 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %11, i32 0, i32 1
  %13 = call i32 @state_cleanup(i32* %12)
  %14 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %15 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %14, i32 0, i32 1
  %16 = call i32 @memset(i32* %15, i32 0, i32 4)
  %17 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %18 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %17, i32 0, i32 1
  %19 = load %struct.wined3d_cs*, %struct.wined3d_cs** %3, align 8
  %20 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %19, i32 0, i32 0
  %21 = load %struct.wined3d_adapter*, %struct.wined3d_adapter** %5, align 8
  %22 = getelementptr inbounds %struct.wined3d_adapter, %struct.wined3d_adapter* %21, i32 0, i32 1
  %23 = load %struct.wined3d_adapter*, %struct.wined3d_adapter** %5, align 8
  %24 = getelementptr inbounds %struct.wined3d_adapter, %struct.wined3d_adapter* %23, i32 0, i32 0
  %25 = load i32, i32* @WINED3D_STATE_NO_REF, align 4
  %26 = load i32, i32* @WINED3D_STATE_INIT_DEFAULT, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @state_init(i32* %18, i32* %20, i32* %22, i32* %24, i32 %27)
  ret void
}

declare dso_local i32 @state_cleanup(i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @state_init(i32*, i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
